--- a/content/html/blog.html
+++ b/content/html/blog.html
@@ -81,6 +81,19 @@ these footnotes were getting out of hand.</p>
 <P><FONT SIZE=4>24 August 2015</FONT><P>
 <P>Have written around 20k words of the second book in the Calhoun trilogy. It (mostly) ties together, but some loose ends require Chekov's gun adding earlier on in the narrative.</P>
 <P>Working title for it was Dark God Triumphant, but I think its final title will be Calhoun: Redemption. </P>
+<P><FONT SIZE=4>11th August 2015</FONT></P>
+<P>I have been struck down by a mystery illness, which in all probability is a cold. I have put my writing on hold until I recover. Not being a whiner (or having any sympathy for them) I cant really complain, or elict sympathy. So I will plough stoically on.</P>
+<P>Except by ploughing I mean doing nothing except lying like an 19th C opium fiend on a chaise longue in the withdrawing room with a cold flannel pressed to my forehead* </P>
+<P></P>
+<P>* I dont own a flannel or a chaise longue, or indeed have a withdrawing room.</P>
+<P><FONT SIZE=4>5th August 2015</FONT></P>
+<P>Being a lazy albeit perverse man, I am writing this in html using vi. As such I am limited only by my phenomenal lack of knowledge of the language (and a spell checker).</P>
+<P>But never say a lazy man is not resourceful, I have managed most of my life, accomplishing complex building projects using only a hammer and a (flathead) screwdriver. I did have to resort to buying a drill, and then some screws, oh and a drill bit, and several bags of cement, some breezeblocks, rawlplugs, a soldering iron - anyway, that's not the point. What is my point? At this point I am not that sure. If I thought that this was going to be read then I would be slightly concerned, as a writer you are judged on your wroting* which many would view as unfair. In my case I would ask you to also judge me on the wall I built (don't judge too harshly and yes it is supposed to lean like that). This is very much a first draft, and reading it you would be amazed that it could be improved upon. So imagine what my books are like.</P>
+<P>In fact don't imagine, read one**</P>
+<P></P>
+<P>* That was deliberate ;P</P>
+<P>** OK, theres only one at the moment, but I have got several others planned.</P>
+<P></P>
 <P><FONT SIZE=4>11
 <P> <a href="index.html">Main  </a></p>
 </div>
