--- a/content/html/products.html
+++ b/content/html/products.html
@@ -16,12 +16,7 @@
 </div>
 <div id="gentext" 
 <p><a href="">MSP2000</a></p>
-	<p>Its night, the garden is quiet save for the creak of snails
-	making their way to the Hostas, all is peaceful. But wait! There in
-	the undergrowth lurks Old Tom, the fat ginger cat from number 23. He
-	prowls through the foilage on the look out for prey to torture and
-	discard. He pauses as the urge to defecate pushes to the forefront
-	of his needs. A soft patch of ground is ahead, he pads towards it
+	<p>GOJD eeds. A soft patch of ground is ahead, he pads towards it
 	making ready to despoil it with his fetid excrement. 
 	</p>
 	<p> Familiar scene? Well fear no more because the MSP2000 is here! </p>
