--- a/content/html/index.html
+++ b/content/html/index.html
@@ -1,71 +1,131 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joe Mansour - Author - Thrillers & Mystery</title>
+    <meta name="description" content="Author: Joe Mansour">
+    <meta property="og:title" content="Joe Mansour Author" />
+    <style>
+        /* Basic CSS for styling */
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-	<style type="text/css" title="currentStyle" media="screen">
-		@import "jemansour.css";
-        p.hidden {
-		visibility:hidden
-        }	
-	</style>
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
-	<title>Joe Mansour author writer thrillers mystery</title>
-<meta content="Joe Mansour Author" property="og:title" />
-<meta name="Description" content="Author: Joe Mansour">
-<meta content="Joe Mansour Author" name="description" />
+        .heading {
+            text-align: center;
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+
+        .paragraph {
+            margin-bottom: 15px;
+        }
+
+        .navigation {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .navigation a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: blue;
+        }
+
+        .links {
+            margin-top: 20px;
+        }
+
+        .links a {
+            margin-right: 10px;
+        }
+
+        .amazon-link {
+            margin-top: 10px;
+            text-align: center;
+        }
+
+        .hidden {
+            visibility: hidden;
+        }
+    </style>
 </head>
 
 <body>
 
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.4";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.4";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 
-<!-- <div id="maincontainer"> 
-<h1>Joe Mansour</h1>
-</div> -->
-<div id="gentext">
-<!-- <P><FONT SIZE=8>Welcome to the website of author Joe Mansour </FONT></P> -->
-<P>The screen goes black,</P>
-<P> a low drum beat starts in the background,</P>
-<P> dun dun dun,</P>
-<P> stars appear,</P>
-<P> they swirl around and coalesce in to:</P>
-<P align="center"><FONT SIZE=8>Joe Mansour </FONT></P>
-<P>You gasp in amazement and wonder about your gig limit.</P>
-<P>Welcome to my website, here you will find the answer to questions such as 'why didn't you use a template for your homepage?' </P> 
-<P> Sign up for emails or have a question: <a href="mailto:author.jmansour@gmail.com">author.jmansour@gmail.com</a></P>
-<p align="center"><a href="books.html">Books</a> <a href="about.html">About/Bio</a> <a href="blog.html">Blog</a>
-<a href="stories.html">Stories</a>
-</p>
-</p>
-<P><FONT SIZE=4> Links and likes and <a href="https://www.flickr.com/photos/julialat34/7185385796">monkeys on bikes:</a></P>
-<P>
-<a href="https://twitter.com/JEMansour" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @JEMansour</a>
-<P></P>
-</div>
-<div id="gentext">
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-<div class="fb-like" data-href="https://www.facebook.com/joewriting" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-<div id="gentext">
-<a href="http://www.amazon.it/?tag=jemansourco07-21">
-<img src="http://g-ecx.images-amazon.com/images/G/29/associates/it_logo.png" border="0" alt="In cooperazione con Amazon.it">
-</a>
-</div>
-<div id="gentext">
-<A HREF="http://www.amazon.de/exec/obidos/redirect-home?tag=jemansourco0e-21&site=home">Einkaufen bei Amazon.de</A>
-</div>
-<div id="gentext">
-<p align="left"><a href="http://www.goodebooks.net/authbook.html">
-<img src="http://www.goodebooks.net/images/gepromote.jpg" border="0"  WIDTH="200"  
-alt=" " title="GOOD  EBOOKS will promote your books and eBooks !"></a></p>
-</div>
+    <div class="container">
+        <div class="content">
+            <p class="paragraph">The screen goes black,</p>
+            <p class="paragraph">a low drum beat starts in the background,</p>
+            <p class="paragraph">dun dun dun,</p>
+            <p class="paragraph">stars appear,</p>
+            <p class="heading">Joe Mansour</p>
+            <p class="paragraph">You gasp in amazement and wonder about your gig limit.</p>
+            <p class="paragraph">Welcome to my website, here you will find the answer to questions such as 'why didn't you use a template for your homepage?'</p>
+            <p class="paragraph">Sign up for emails or have a question: <a href="mailto:author.jmansour@gmail.com">author.jmansour@gmail.com</a></p>
+        </div>
 
+        <nav class="navigation">
+            <a href="books.html">Books</a>
+            <a href="about.html">About/Bio</a>
+            <a href="blog.html">Blog</a>
+            <a href="stories.html">Stories</a>
+        </nav>
+
+        <div class="links">
+            <p class="paragraph">Links and likes and <a href="https://www.flickr.com/photos/julialat34/7185385796">monkeys on bikes:</a></p>
+            <a href="https://twitter.com/JEMansour" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @JEMansour</a>
+            <a href="https://bsky.app/profile/joemansour.bsky.social" target="_blank">Bluesky</a>
+            <script>
+                ! function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0],
+                        p = /^http:/.test(d.location) ? 'http' : 'https';
+                    if (!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = p + '://platform.twitter.com/widgets.js';
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, 'script', 'twitter-wjs');
+            </script>
+            <div class="fb-like" data-href="https://www.facebook.com/joewriting" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+        </div>
+
+        <div class="amazon-link">
+            <a href="http://www.amazon.it/?tag=jemansourco07-21">
+                <img src="http://g-ecx.images-amazon.com/images/G/29/associates/it_logo.png" border="0" alt="Amazon.it">
+            </a>
+        </div>
+
+        <div class="amazon-link">
+            <a href="http://www.amazon.de/exec/obidos/redirect-home?tag=jemansourco0e-21&site=home">Einkaufen bei Amazon.de</a>
+        </div>
+
+    </div>
 
 </body>
 
