--- a/content/html/stories.html
+++ b/content/html/stories.html
@@ -12,7 +12,7 @@
 <body>
 <div id="gentext">
 <p class="P1">Th<span class="T2">e</span>s<span class="T2">e</span> work<span class="T2">s</span> <span class="T2">are</span> licensed under the Creative Commons <span class="T1">Attribution-NonCommercial-NoDerivatives 4.0 International (</span><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" class="Internet_20_link"><span class="T1">CC BY-NC-ND 4.0</span></a><span class="T1">) by </span><a href="mailto:joe@jemansour.com" class="Internet_20_link"><span class="T1">Joe Mansour</span></a></p><p class="P1"><span class="T3">Th</span><span class="T4">ese</span><span class="T3"> </span><span class="T4">are</span><span class="T3"> </span><span class="T4">a </span><span class="T3">work of fiction. Names, characters, businesses, places, events and incidents are either the products of the author's imagination or used in a fictitious manner. Any resemblance to actual persons, living or dead, or actual events is purely coincidental.</span></p>
-<P> <a href="teleportation.pdf" style="font-size: 1.5em;">Teleportation</a> </P>
+<P> <a href="teleportation.pdf" style="font-size: 1.5em;">Teleportation</a> <a href="blackberries.pdf" style="font-size: 1.5em;">Blackberries</a></P>
 <P> <a href="index.html">Main </a></P>
 </div>
 </body>
