--- a/content/html/index.html
+++ b/content/html/index.html
@@ -97,7 +97,7 @@
         </nav>
 
         <div class="links">
-            <p class="paragraph">Links and likes and <a href="https://www.flickr.com/photos/julialat34/7185385796">monkeys on bikes:</a></p>
+            <p class="paragraph">Links and likes and <a href="monkeybike.jpeg">monkeys on bikes:</a></p>
             <a href="https://twitter.com/JEMansour" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @JEMansour</a>
             <a href="https://bsky.app/profile/joemansour.bsky.social" target="_blank">Bluesky</a>
             <script>
