--- a/content/html/index.html
+++ b/content/html/index.html
@@ -86,7 +86,7 @@
             <p class="heading">Joe Mansour</p>
             <p class="paragraph">You gasp in amazement and wonder about your gig limit.</p>
             <p class="paragraph">Welcome to my website, here you will find the answer to questions such as 'why didn't you use a template for your homepage?'</p>
-            <p class="paragraph">Sign up for emails or have a question: <a href="mailto:author.jmansour@gmail.com">author.jmansour@gmail.com</a></p>
+            <p class="paragraph">Contact me: <a href="mailto:author.jmansour@gmail.com">author.jmansour@gmail.com</a></p>
         </div>
 
         <nav class="navigation">
