--- a/content/html/index.html
+++ b/content/html/index.html
@@ -100,6 +100,7 @@
             <p class="paragraph">Links and likes and <a href="monkeysonbikes.jpeg">monkeys on bikes:</a></p>
             <a href="https://twitter.com/JEMansour" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @JEMansour</a>
             <a href="https://bsky.app/profile/joemansour.bsky.social" target="_blank">Bluesky</a>
+            <a href="http://freedns.afraid.org/" target="_blank">Free DNS</a>
             <script>
                 ! function(d, s, id) {
                     var js, fjs = d.getElementsByTagName(s)[0],
